--- a/package.json
+++ b/package.json
@@ -3,15 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.0.1",
-    "@testing-library/user-event": "^13.5.0",
     "express": "^4.17.3",
-    "mongoose": "^6.2.10",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-scripts": "^5.0.1",
-    "web-vitals": "^2.1.4"
+    "mongoose": "^6.2.10"
   },
   "scripts": {
     "start": "node app.js",
@@ -38,12 +31,8 @@
   },
   "devDependencies": {
     "eslint": "^8.13.0",
-    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-react": "^7.29.4",
-    "eslint-plugin-react-hooks": "^4.4.0",
     "nodemon": "^2.0.15"
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
